fix spacing

--- a/src/css/pages/_generic.scss
+++ b/src/css/pages/_generic.scss
@@ -140,6 +140,5 @@
 .support-links {
     display: flex;
     gap: var(--spacing-md);
-    margin-bottom: var(--spacing-sm);
     justify-content: center;
 }
